[Java 17] Update src/main/java/com/example/java8/stream/StreamProcessor.java from Jira ticket JAVA-134
- Timestamp: 2024-12-05 17:09:07
- Source: Jira code review
- Ticket: JAVA-134
- File: src/main/java/com/example/java8/stream/StreamProcessor.java
- Branch: testing
- Type: Java 17 conversion