@@ -7,15 +7,13 @@ import java.util.stream.Stream;
 
 public class StreamProcessor {
     public void demonstrateJava8Streams() {
-        List<String> items = Arrays.asList("a", "b", "c");
+        List<String> items = List.of("a", "b", "c");
         
-        // Java 17 style stream processing
         Stream<String> stream = items.stream()
             .filter(item -> item.length() > 0)
             .map(String::toUpperCase)
             .distinct();
             
-        // Java 17 specific collect operation
         String result = stream.collect(Collectors.joining(", "));
     }
 }
